--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
+    "test-watch": "jest --config test/unit/jest.conf.js --coverage --watch",
     "lint": "eslint --ext .js,.vue src test/unit",
     "build": "node build/build.js"
   },
