--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "highlight.js": "^9.12.0",
+    "marked": "^0.5.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
