--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "dependencies": {
     "highlight.js": "^9.12.0",
     "marked": "^0.5.1",
-    "vue": "^2.5.2",
+    "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.25",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
